--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'material-icons/iconfont/material-icons.css';
+
+html,
+body {
+  height: 100%;
+
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size : 12px;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+
+}
+ .content-container{
+  width: 100%;
+  max-width: 748px;
+
+
+
+ }
+
